gateway-api/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: meuapp-stable
  namespace: default
spec:
  ports:
  - port: 80
    targetPort: 5678
    protocol: TCP
  selector:
    app: meuapp
---
apiVersion: v1
kind: Service
metadata:
  name: meuapp-canary
  namespace: default
spec:
  ports:
  - port: 80
    targetPort: 5678
    protocol: TCP
  selector:
    app: meuapp
