gateway-api/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: meuapp-gateway
  namespace: default
spec:
  gatewayClassName: nginx
  listeners:
  - name: http
    hostname: "meuapp.apps.cluster.local"
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same
